homepage video card added.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,249 @@
         </ul>
     </div>
 
+    <div class="vi-container">
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="vi-card">
+            <div class="vi-card-img">
+                <img class="bui-img-fluid" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
+            </div>
+            <div class="vi-card-body">
+                <div>
+                    <img class="vi-channel-icon" class="bui-img-fluid" src="https://docs.snap.com/assets/images/creating-an-icon_creating_an_icon_world_example-a831f0c2b967e422d37120d99c9959e0.png" alt="">
+                </div>
+                <div>
+                    <div class="vi-video-title">
+                        Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
+                    </div>
+                    <div class="vi-channel-title">NBC Sports</div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                </div>
+                <div>
+                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
 
 
