--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     
     <div class="sidebar">
         <ul>
-            <li class="sidebar-menu-active"><i class="bi bi-house-fill"></i> Home</li>
-            <li><i class="bi bi-speedometer2"></i> Explore</li>
-            <li><i class="bi bi-collection-play"></i> Playlist</li>
-            <li><i class="bi bi-clock-history"></i> History</li>
-            <li><i class="bi bi-play-btn"></i> Watch Later</li>
-            <li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li>
+            <a href="index.html"><li class="sidebar-menu-active"><i class="bi bi-house-fill"></i> Home</li></a>
+            <a href="explore.html"><li><i class="bi bi-speedometer2"></i> Explore</li></a>
+            <a href="#"><li><i class="bi bi-collection-play"></i> Playlist</li></a>
+            <a href="#"><li><i class="bi bi-clock-history"></i> History</li></a>
+            <a href="#"><li><i class="bi bi-play-btn"></i> Watch Later</li></a>
+            <a href="#"><li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li></a>
             <div class="sidebar-hr"></div>
-            <li><i class="bi bi-music-note-list"></i> Music</li>
-            <li><i class="bi bi-trophy"></i> Sport</li>
-            <li><i class="bi bi-controller"></i> Gaming</li>
-            <li><i class="bi bi-film"></i> Flims</li>
-            <li><i class="bi bi-newspaper"></i> News</li>
-            <li><i class="bi bi-music-note-list"></i> Fashion & Beauty</li>
-            <li><i class="bi bi-book"></i> Learning</li>
+            <a href="#"><li><i class="bi bi-music-note-list"></i> Music</li></a>
+            <a href="#"><li><i class="bi bi-trophy"></i> Sport</li></a>
+            <a href="#"><li><i class="bi bi-controller"></i> Gaming</li></a>
+            <a href="#"><li><i class="bi bi-film"></i> Flims</li></a>
+            <a href="#"><li><i class="bi bi-newspaper"></i> News</li></a>
+            <a href="#"><li><i class="bi bi-music-note-list"></i> Fashion & Beauty</li></a>
+            <a href="#"><li><i class="bi bi-book"></i> Learning</li></a>
         </ul>
     </div>
 
