playlist page added.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="bui-navbar">
         <div class="bui-navbar-container">
             <div class="bui-navbar-logo">
-                <span class="btn-sidebar"><i class="bi bi-list"></i></span>
+                <span class="btn-sidebar" id="sidebarBtn"><i class="bi bi-list"></i></span>
                 <img src="images/logo.png" alt="">
             </div>
             <div class="bui-navbar-menu bui-navbar-search">
@@ -25,11 +25,11 @@
         </div>
     </nav>
     
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
         <ul>
-            <a href="index.html"><li class="sidebar-menu-active"><i class="bi bi-house-fill"></i> Home</li></a>
+            <a href="index.html"><li class="sidebar-menu-active" id="sidebarBtn"><i class="bi bi-house-fill"></i> Home</li></a>
             <a href="explore.html"><li><i class="bi bi-speedometer2"></i> Explore</li></a>
-            <a href="#"><li><i class="bi bi-collection-play"></i> Playlist</li></a>
+            <a href="playlist.html"><li><i class="bi bi-collection-play"></i> Playlist</li></a>
             <a href="#"><li><i class="bi bi-clock-history"></i> History</li></a>
             <a href="#"><li><i class="bi bi-play-btn"></i> Watch Later</li></a>
             <a href="#"><li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li></a>
@@ -290,6 +290,6 @@
     
 
 
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
