like button and menu added.

--- a/index.html
+++ b/index.html
@@ -58,10 +58,20 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views">
+                        <span>23M views</span>
+                        <span>1 year ago</span>
+                        <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span>
+                    </div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_1')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_1">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -78,7 +88,7 @@
                         Manchester United v. Norwich City...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -98,7 +108,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -118,7 +128,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -138,7 +148,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -158,7 +168,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -178,7 +188,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -198,7 +208,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -218,7 +228,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -238,7 +248,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -258,7 +268,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
@@ -278,7 +288,7 @@
                         Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS...
                     </div>
                     <div class="vi-channel-title">NBC Sports</div>
-                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span></div>
+                    <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
                 <div>
                     <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
