--- a/explore.html
+++ b/explore.html
@@ -56,11 +56,17 @@
                 <div>
                     <div class="vi-video-hr-title"> Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS | 4/16/2022 | NBC Sports </div>
                     <div class="vi-video-hr-mobile"> Manchester United v. Norwich City </div>
-                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span></div>
+                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span> <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                     <div class="vi-channel-hr-desc">Cristiano Ronaldo's hat trick gave Manchester United a wild win, as the Red Devils blew a 2-0 cushion before seizing a late victory against last-place Norwich...</div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_1')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_1">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -73,7 +79,7 @@
                 <div>
                     <div class="vi-video-hr-title"> Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS | 4/16/2022 | NBC Sports </div>
                     <div class="vi-video-hr-mobile"> Manchester United v. Norwich City </div>
-                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span></div>
+                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span> <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                     <div class="vi-channel-hr-desc">Cristiano Ronaldo's hat trick gave Manchester United a wild win, as the Red Devils blew a 2-0 cushion before seizing a late victory against last-place Norwich...</div>
                 </div>
                 <div>
@@ -90,7 +96,7 @@
                 <div>
                     <div class="vi-video-hr-title"> Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS | 4/16/2022 | NBC Sports </div>
                     <div class="vi-video-hr-mobile"> Manchester United v. Norwich City </div>
-                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span></div>
+                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span> <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                     <div class="vi-channel-hr-desc">Cristiano Ronaldo's hat trick gave Manchester United a wild win, as the Red Devils blew a 2-0 cushion before seizing a late victory against last-place Norwich...</div>
                 </div>
                 <div>
@@ -107,7 +113,7 @@
                 <div>
                     <div class="vi-video-hr-title"> Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS | 4/16/2022 | NBC Sports </div>
                     <div class="vi-video-hr-mobile"> Manchester United v. Norwich City </div>
-                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span></div>
+                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span> <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                     <div class="vi-channel-hr-desc">Cristiano Ronaldo's hat trick gave Manchester United a wild win, as the Red Devils blew a 2-0 cushion before seizing a late victory against last-place Norwich...</div>
                 </div>
                 <div>
@@ -124,7 +130,7 @@
                 <div>
                     <div class="vi-video-hr-title"> Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS | 4/16/2022 | NBC Sports </div>
                     <div class="vi-video-hr-mobile"> Manchester United v. Norwich City </div>
-                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span></div>
+                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span> <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                     <div class="vi-channel-hr-desc">Cristiano Ronaldo's hat trick gave Manchester United a wild win, as the Red Devils blew a 2-0 cushion before seizing a late victory against last-place Norwich...</div>
                 </div>
                 <div>
@@ -141,7 +147,7 @@
                 <div>
                     <div class="vi-video-hr-title"> Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS | 4/16/2022 | NBC Sports </div>
                     <div class="vi-video-hr-mobile"> Manchester United v. Norwich City </div>
-                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span></div>
+                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span> <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                     <div class="vi-channel-hr-desc">Cristiano Ronaldo's hat trick gave Manchester United a wild win, as the Red Devils blew a 2-0 cushion before seizing a late victory against last-place Norwich...</div>
                 </div>
                 <div>
@@ -158,7 +164,7 @@
                 <div>
                     <div class="vi-video-hr-title"> Manchester United v. Norwich City | PREMIER LEAGUE HIGHLIGHTS | 4/16/2022 | NBC Sports </div>
                     <div class="vi-video-hr-mobile"> Manchester United v. Norwich City </div>
-                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span></div>
+                    <div class="vi-channel-hr-title"><span>NBC Sports</span><i class="bi bi-dot"></i><span>23M views</span> <i class="bi bi-dot"></i> <span>1 year ago</span> <span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                     <div class="vi-channel-hr-desc">Cristiano Ronaldo's hat trick gave Manchester United a wild win, as the Red Devils blew a 2-0 cushion before seizing a late victory against last-place Norwich...</div>
                 </div>
                 <div>
