history page added.

--- a/history.html
+++ b/history.html
@@ -28,9 +28,9 @@
     <div class="sidebar" id="sidebar">
         <ul>
             <a href="index.html"><li><i class="bi bi-house-fill"></i> Home</li></a>
-            <a href="explore.html"><li class="sidebar-menu-active"><i class="bi bi-speedometer2"></i> Explore</li></a>
+            <a href="explore.html"><li><i class="bi bi-speedometer2"></i> Explore</li></a>
             <a href="playlist.html"><li><i class="bi bi-collection-play"></i> Playlist</li></a>
-            <a href="history.html"><li><i class="bi bi-clock-history"></i> History</li></a>
+            <a href="history.html"><li class="sidebar-menu-active"><i class="bi bi-clock-history"></i> History</li></a>
             <a href="#"><li><i class="bi bi-play-btn"></i> Watch Later</li></a>
             <a href="#"><li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li></a>
             <div class="sidebar-hr"></div>
@@ -46,8 +46,11 @@
 
     <div class="vi-container-vertical">
 
-        <div class="vi-container-title">Trending videos</div>
+        <div class="vi-container-title">Watch history</div>
         
+
+        <div class="vi-container-title">Today</div>
+
         <div class="vi-card-hr">
             <div class="vi-card-hr-tumbnail">
                 <img class="vi-card-hr-img" src="https://i.ytimg.com/vi/a5s84piQdJI/hqdefault.jpg" alt="">
@@ -63,6 +66,7 @@
                     <a href="#"  onclick="showDropdownMenu('dropdown_1')"><i class="bi bi-three-dots-vertical"></i></a>
                     <div class="vi-card-dropdown" id="dropdown_1">
                         <ul>
+                            <li><i class="bi bi-x"></i> Remove from History</li>
                             <li><i class="bi bi-play-btn"></i> Save to watch later</li>
                             <li><i class="bi bi-collection-play"></i> save to playlist</li>
                         </ul>
@@ -70,6 +74,9 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="vi-container-title">Yesterday</div>
         
         <div class="vi-card-hr">
             <div class="vi-card-hr-tumbnail">
@@ -86,6 +93,7 @@
                     <a href="#"  onclick="showDropdownMenu('dropdown_2')"><i class="bi bi-three-dots-vertical"></i></a>
                     <div class="vi-card-dropdown" id="dropdown_2">
                         <ul>
+                            <li><i class="bi bi-x"></i> Remove from History</li>
                             <li><i class="bi bi-play-btn"></i> Save to watch later</li>
                             <li><i class="bi bi-collection-play"></i> save to playlist</li>
                         </ul>
@@ -109,6 +117,7 @@
                     <a href="#"  onclick="showDropdownMenu('dropdown_3')"><i class="bi bi-three-dots-vertical"></i></a>
                     <div class="vi-card-dropdown" id="dropdown_3">
                         <ul>
+                            <li><i class="bi bi-x"></i> Remove from History</li>
                             <li><i class="bi bi-play-btn"></i> Save to watch later</li>
                             <li><i class="bi bi-collection-play"></i> save to playlist</li>
                         </ul>
@@ -132,6 +141,7 @@
                     <a href="#"  onclick="showDropdownMenu('dropdown_4')"><i class="bi bi-three-dots-vertical"></i></a>
                     <div class="vi-card-dropdown" id="dropdown_4">
                         <ul>
+                            <li><i class="bi bi-x"></i> Remove from History</li>
                             <li><i class="bi bi-play-btn"></i> Save to watch later</li>
                             <li><i class="bi bi-collection-play"></i> save to playlist</li>
                         </ul>
@@ -139,6 +149,8 @@
                 </div>
             </div>
         </div>
+
+        <div class="vi-container-title">28 March 2022</div>
 
         <div class="vi-card-hr">
             <div class="vi-card-hr-tumbnail">
@@ -155,6 +167,7 @@
                     <a href="#"  onclick="showDropdownMenu('dropdown_5')"><i class="bi bi-three-dots-vertical"></i></a>
                     <div class="vi-card-dropdown" id="dropdown_5">
                         <ul>
+                            <li><i class="bi bi-x"></i> Remove from History</li>
                             <li><i class="bi bi-play-btn"></i> Save to watch later</li>
                             <li><i class="bi bi-collection-play"></i> save to playlist</li>
                         </ul>
@@ -178,6 +191,7 @@
                     <a href="#"  onclick="showDropdownMenu('dropdown_6')"><i class="bi bi-three-dots-vertical"></i></a>
                     <div class="vi-card-dropdown" id="dropdown_6">
                         <ul>
+                            <li><i class="bi bi-x"></i> Remove from History</li>
                             <li><i class="bi bi-play-btn"></i> Save to watch later</li>
                             <li><i class="bi bi-collection-play"></i> save to playlist</li>
                         </ul>
@@ -201,6 +215,7 @@
                     <a href="#"  onclick="showDropdownMenu('dropdown_7')"><i class="bi bi-three-dots-vertical"></i></a>
                     <div class="vi-card-dropdown" id="dropdown_7">
                         <ul>
+                            <li><i class="bi bi-x"></i> Remove from History</li>
                             <li><i class="bi bi-play-btn"></i> Save to watch later</li>
                             <li><i class="bi bi-collection-play"></i> save to playlist</li>
                         </ul>
