--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="index.html"><li class="sidebar-menu-active" id="sidebarBtn"><i class="bi bi-house-fill"></i> Home</li></a>
             <a href="explore.html"><li><i class="bi bi-speedometer2"></i> Explore</li></a>
             <a href="playlist.html"><li><i class="bi bi-collection-play"></i> Playlist</li></a>
-            <a href="#"><li><i class="bi bi-clock-history"></i> History</li></a>
+            <a href="history.html"><li><i class="bi bi-clock-history"></i> History</li></a>
             <a href="#"><li><i class="bi bi-play-btn"></i> Watch Later</li></a>
             <a href="#"><li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li></a>
             <div class="sidebar-hr"></div>
@@ -90,8 +90,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_2')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_2">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -110,8 +116,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_3')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_3">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -130,8 +142,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_4')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_4">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -150,8 +168,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_5')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_5">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -170,8 +194,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_6')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_6">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -190,8 +220,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_7')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_7">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -210,8 +246,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_8')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_8">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -230,8 +272,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_9')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_9">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -250,8 +298,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_10')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_10">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -270,8 +324,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_11')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_11">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -290,8 +350,14 @@
                     <div class="vi-channel-title">NBC Sports</div>
                     <div class="vi-channel-views"><span>23M views</span><span>1 year ago</span><span class="vi-card-likes"><i class="bi bi-hand-thumbs-up"></i> <i class="bi bi-hand-thumbs-down"></i></span></div>
                 </div>
-                <div>
-                    <a href="#"><i class="bi bi-three-dots-vertical"></i></a>
+                <div class="vi-card-menu">
+                    <a href="#"  onclick="showDropdownMenu('dropdown_12')"><i class="bi bi-three-dots-vertical"></i></a>
+                    <div class="vi-card-dropdown" id="dropdown_12">
+                        <ul>
+                            <li><i class="bi bi-play-btn"></i> Save to watch later</li>
+                            <li><i class="bi bi-collection-play"></i> save to playlist</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
