--- a/playlist.html
+++ b/playlist.html
@@ -30,7 +30,7 @@
             <a href="index.html"><li><i class="bi bi-house-fill"></i> Home</li></a>
             <a href="explore.html"><li><i class="bi bi-speedometer2"></i> Explore</li></a>
             <a href="playlist.html"><li class="sidebar-menu-active"><i class="bi bi-collection-play"></i> Playlist</li></a>
-            <a href="#"><li><i class="bi bi-clock-history"></i> History</li></a>
+            <a href="history.html"><li><i class="bi bi-clock-history"></i> History</li></a>
             <a href="#"><li><i class="bi bi-play-btn"></i> Watch Later</li></a>
             <a href="#"><li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li></a>
             <div class="sidebar-hr"></div>
